<resources>
    <string name="app_name">荣格财经</string>

    <string name="main_tab_news">新闻</string>
    <string name="main_tab_fast">快评</string>
    <string name="main_tab_activity">活动</string>
    <string name="main_tab_mine">我的</string>

    <!--menu-->
    <string name="news">新闻</string>
    <string name="photo">图片</string>
    <string name="tools">设置</string>
    <string name="no_photo_mode">无图模式</string>
    <string name="night_mode">夜间模式</string>
    <string name="about">关于</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- 共享过度动画 -->
    <string name="transition_photos">transition_animation_news_photos</string>

    <!-- 新闻 -->
    <string name="photo_collections">图集：%1$s</string>
    <string name="news_from">%1$s %2$s</string>
    <string name="photo_detail_title">%1$d/%2$d　%3$s</string>
    <string name="web_view">WebView</string>
    <string name="photo_news">图片新闻</string>
    <string name="browser">用浏览器打开</string>
    <string name="share">分享</string>

    <!-- 新闻频道 -->
    <string name="channel_explain">点击可增删/长按并拖拽可排序</string>
    <string name="my_channel">我的</string>
    <string name="news_channel">资讯</string>
    <string name="college_channel">学院</string>
    <string name="market_channel">行情</string>
    <string name="channel_manage">分类</string>

    <string name="ad">广告</string>
    <string name="article_detail">文章详情</string>

    <!-- 图片 -->
    <string name="girl_title">靓妹纸</string>
    <string name="girl">妹纸</string>
    <string name="set_wallpaper">设为壁纸</string>
    <!--视频-->
    <string name="videos">视频</string>
    <string name="video_play_times">%1$s次播放</string>

    <!--动态 -->
    <string name="circle_zone">动态</string>
    <string name="zone_img_position">circle_img_position</string>
    <string name="circle_zone_not_read_news">%1$s条新消息</string>
    <string name="expand">全文</string>
    <string name="shink">收起</string>

    <string name="circle_publish_empty">发表内容不能为空！</string>
    <string name="zone_publish_title">发表说说</string>
    <string name="zone_toggle_theme_title">切换主题</string>
    <string name="friend_zone_title">好友动态</string>
    <string name="friend_zone_toggle">日夜模式切换</string>
    <string name="friend_zone_about">关于</string>
    <string name="care_main_title">我关注的</string>
    <string name="care_about_wechat">更多精彩文章请关注微信公众号"Android经验分享"：这里将长期为您分享Android高手经验、中外开源项目、源码解析、框架设计和Android好文推荐！</string>

    <string name="subscribe">订阅</string>
    <string name="no_description">暂无简介</string>
    <string name="fans">粉丝</string>
    <string name="score">积分</string>
    <string name="upgrade_media_account">升级为媒体账户</string>
    <string name="media_account">媒体账户</string>
    <string name="my_fav">我的收藏</string>
    <string name="media_publish">媒体发布</string>
    <string name="info">资讯</string>
    <string name="analyze">行情</string>
    <string name="activity">活动</string>
    <string name="nick_name">昵称: </string>
    <string name="description">简介: </string>
    <string name="description_hint">请输入您的简介</string>
    <string name="submit">提交</string>
    <string name="save">保存</string>
    <string name="update_info">修改信息</string>
    <string name="account_safe">账户绑定与安全</string>
    <string name="clear_cache">清除缓存</string>
    <string name="curr_version">当前版本</string>
    <string name="about_us">关于我们</string>
    <string name="contact_us">联系我们</string>
    <string name="feedback">意见反馈</string>
    <string name="logout">注销登录</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="update_pwd">修改密码</string>
    <string name="update_pwd_succ">密码修改成功</string>
    <string name="verifycode">获取验证码</string>
    <string name="old_pwd_hint">输入旧密码</string>
    <string name="mobile_hint">输入手机号</string>
    <string name="verifycode_hint">输入手机验证码</string>
    <string name="new_pwd_hint">输入新密码</string>
    <string name="confirm_pwd_hint">验证密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="setting">设置</string>
    <string name="register_pwd_hint">输入密码（6-24位字母或数字组合）</string>
    <string name="login_refer">已有账号？</string>
    <string name="go_login">去登录</string>
    <string name="register_refer">注册新用户</string>
    <string name="forget_pwd_refer">忘记密码？</string>
    <string name="wechat_login">微信登录</string>
    <string name="mobile_login">手机登录</string>
    <string name="account_login">账号登录</string>
    <string name="register_success">注册成功</string>
    <string name="fav">收藏</string>
    <string name="submit_success">提交成功</string>
    <string name="comment_list">评论列表</string>
    <string name="activity_signup">活动报名</string>
    <string name="refer">提示</string>
    <string name="share_contents">分享自荣格财经</string>
    <string name="submit_failure">提交失败</string>

    <string name="latest_alertdialog_message">已经是最新版本</string>
    <string name="remind_alertdialog_title">提示</string>
    <string name="same_wifi_alertdialog_message">为保证正常使用，请确保手机和连接的设备处于相同的WIFI网络</string>
    <string name="alertdialog_positive_btn">确 定</string>
    <string name="alertdialog_negative_btn">退 出</string>
    <string name="alertdialog_negative_btn_cancel">取 消</string>
    <string name="notification_error_ssl_cert_invalid">SSL证书验证失败</string>
</resources>
