<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/container_background"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.leon.common.commonwidget.NormalTitleBar
        android:id="@+id/ntb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/channel_manage" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/channel_explain"
        android:textColor="?attr/dayNightTwoTextColor"
        android:textSize="@dimen/font_small" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/news_channel_sort_title"
                android:text="@string/my_channel" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/news_channel_mine_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"></android.support.v7.widget.RecyclerView>

            <TextView
                style="@style/news_channel_sort_title"
                android:text="@string/news_channel" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/news_channel_news_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"></android.support.v7.widget.RecyclerView>

            <TextView
                style="@style/news_channel_sort_title"
                android:text="@string/college_channel" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/news_channel_college_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"></android.support.v7.widget.RecyclerView>

            <TextView
                style="@style/news_channel_sort_title"
                android:text="@string/market_channel" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/news_channel_market_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"></android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
