<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/old_pwd_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@null"
        android:hint="@string/old_pwd_hint"
        android:inputType="textPassword"
        android:lines="1"
        android:padding="15dp"
        android:textColor="@color/_333333"
        android:textColorHint="@color/_bbbbbb"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/sendsms_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <View
                android:layout_width="0.5dp"
                android:layout_height="30dp"
                android:background="@color/divider_line" />

            <com.leon.common.ui.counterButton.CounterButton
                android:id="@+id/sendsms_tv"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@null"
                android:gravity="center"
                android:text="@string/verifycode"
                android:textSize="13sp" />

        </LinearLayout>


        <EditText
            android:id="@+id/mobile_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/sendsms_layout"
            android:background="@null"
            android:hint="@string/mobile_hint"
            android:inputType="phone"
            android:lines="1"
            android:padding="15dp"
            android:textColor="@color/_333333"
            android:textColorHint="@color/_bbbbbb"
            android:textSize="14sp" />


    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_line" />


    <EditText
        android:id="@+id/verifycode_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@null"
        android:hint="@string/verifycode_hint"
        android:inputType="number"
        android:lines="1"
        android:padding="15dp"
        android:textColor="@color/_333333"
        android:textColorHint="@color/_bbbbbb"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_line" />


    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_btn"
        android:text="@string/save"
        android:textColor="@color/_333333"
        android:textSize="13sp" />
</LinearLayout>